--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
     <div class="container">
         <h1>音频分贝对数转换器 - By Milk</h1>
         <div class="controls">
-            <button id="startBtn">开始录音</button>
-            <button id="stopBtn" disabled>停止录音</button>
+            <button id="startBtn">开始录音 [START RECORDING]</button>
+            <button id="stopBtn" disabled>停止录音 [STOP RECORDING]</button>
         </div>
         <canvas id="visualizer"></canvas>
         <div class="values">
-            <p>当前分贝值: <span id="dbValue">0</span> dB</p>
-            <p>对数值: <span id="logValue">0</span></p>
+            <p>当前分贝值[CURRENT DB VALUE]: <span id="dbValue">0</span> dB</p>
+            <p>对数值[LOG VALUE]: <span id="logValue">0</span></p>
         </div>
         <div class="formula" style="margin-top: 20px; padding: 15px; background-color: #f8f9fa; border-radius: 5px; border: 1px solid #e9ecef;">
             <h3 style="margin-top: 0; color: #495057;">计算公式说明</h3>
